fixed styling, spacing

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,7 +3,7 @@ a {
   @apply text-black dark:text-white decoration-cool-gray-400 underline underline-offset-2;
 }
 /* Styling Articles */
-article p {
+article main {
   @apply lg:pr-4;
   max-width: 685px;
 }
@@ -19,12 +19,17 @@ article ul p {
   display: inline;
 }
 
+article hr {
+  margin: calc(2rem - 1px) 6rem 2rem 6rem;
+}
+
 article h1 {
   font-family: "Hoefler Text";
   font-style: italic;
   /* text-transform: capitalize; */
 }
-
+section h1,
+section .h1,
 article h1,
 article .h1 {
   font-size: 2.6111111rem;
@@ -32,6 +37,8 @@ article .h1 {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+section h2,
+section .h2,
 article h2,
 article .h2 {
   font-size: 1.6111111rem;
@@ -58,7 +65,8 @@ article .h5 {
 
 article aside {
   /* margin-top: 1rem; */
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
+  font-size: 0.875rem;
 }
 
 img {
@@ -68,6 +76,14 @@ img {
 blockquote {
   margin: 0;
   @apply p-4 md:p-8 border-l-1 border-l-cool-gray-400 bg-cool-gray-100 dark:bg-cool-gray-800;
+}
+
+figure {
+  margin: 2rem 0;
+}
+
+figure figcaption {
+  font-size: 0.875rem;
 }
 
 html,
@@ -93,8 +109,8 @@ body,
 }
 h1,
 .h1 {
-  font-size: 2.3888889rem;
-  line-height: 4rem;
+  font-size: 5rem;
+  line-height: 6rem;
   margin-top: 2rem;
   margin-bottom: 4rem;
 }
